--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -2,17 +2,17 @@
 html,
 body {
   padding: 0;
-  margin: .3em;
+  margin: 0;
   overflow-x: hidden;
 }
-
 .main {
-  padding: 24px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  height: 100%;
-  color: #000;
-  margin: 0 20em 0 20em;
+    padding: 24px;
+    font-family: Montserrat, system-ui, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    height: 100%;
+    color: #000;
+    margin: 3em 20em 0 20em;
 }
 
 .main h1 {
@@ -24,9 +24,9 @@ body {
 }
 
 .main h3, h4, h5, h6 {
-  font-size: 0.5em;
+  font-size: 1em;
 }
 
 .main p {
-  font-size: 2em;
+  font-size: 1em;
 }
