--- a/src/styles/utils/variables/colors/colors.scss
+++ b/src/styles/utils/variables/colors/colors.scss
@@ -20,4 +20,4 @@ $font-menu-dark: $font-heading-dark;
 $font-menu-light: $font-heading-light;
 $font-anchor-dark: #5f88ff;
 
-$border-menu-color-dark: rgb(103 100 100 / 60%);
+$border-menu-color-dark: rgb(103 * 1 100 * 1 100 * 1 / 0.6 * 1);
