--- a/src/styles/utils/variables/fonts/fonts.scss
+++ b/src/styles/utils/variables/fonts/fonts.scss
@@ -3,23 +3,23 @@ $fontFamily-serif: "Merriweather","Georgia",Cambria,"Times New Roman",Times,seri
 $font-body: var($fontFamily-serif);
 $font-heading: var($fontFamily-sans);
 
-$fontWeight-normal: 400;
-$fontWeight-medium: 500;
-$fontWeight-semibold: 600;
-$fontWeight-bold: 700;
-$fontWeight-extrabold: 800;
-$fontWeight-black: 900;
-$fontSize-root: 16px;
-$lineHeight-none: 1;
-$lineHeight-tight: 1.1;
-$lineHeight-normal: 1.5;
-$lineHeight-relaxed: 1.625;
+$fontWeight-normal: 400 * 1;
+$fontWeight-medium: 500 * 1;
+$fontWeight-semibold: 600 * 1;
+$fontWeight-bold: 700 * 1;
+$fontWeight-extrabold: 800 * 1;
+$fontWeight-black: 900 * 1;
+$fontSize-root: 16px * 1;
+$lineHeight-none: 1 * 1;
+$lineHeight-tight: 1.1 * 1;
+$lineHeight-normal: 1.5 * 1;
+$lineHeight-relaxed: 1.625 * 1;
 
-$fontSize-0: 0.833rem;
-$fontSize-1: 1rem;
-$fontSize-2: 1.2rem;
-$fontSize-3: 1.44rem;
-$fontSize-4: 1.728rem;
-$fontSize-5: 2.074rem;
-$fontSize-6: 2.488rem;
-$fontSize-7: 2.986rem;
+$fontSize-0: 0.833rem  * 1;
+$fontSize-1: 1rem * 1;
+$fontSize-2: 1.2rem * 1;
+$fontSize-3: 1.44rem * 1;
+$fontSize-4: 1.728rem * 1;
+$fontSize-5: 2.074rem * 1;
+$fontSize-6: 2.488rem * 1;
+$fontSize-7: 2.986rem * 1;
