--- a/src/styles/utils/variables/sizes/sizes.scss
+++ b/src/styles/utils/variables/sizes/sizes.scss
@@ -1,29 +1,29 @@
-$maxWidth-none: "none";
-$maxWidth-xs: 20rem;
-$maxWidth-sm: 24rem;
-$maxWidth-md: 28rem;
-$maxWidth-lg: 32rem;
-$maxWidth-xl: 36rem;
-$maxWidth-2xl: 42rem;
-$maxWidth-3xl: 48rem;
-$maxWidth-4xl: 56rem;
-$maxWidth-full: "100%";
-$maxWidth-wrapper: var($maxWidth-2xl);
+$maxWidth-none: none;
+$maxWidth-xs: 20rem * 1;
+$maxWidth-sm: 24rem * 1;
+$maxWidth-md: 28rem * 1;
+$maxWidth-lg: 32rem * 1;
+$maxWidth-xl: 36rem * 1;
+$maxWidth-2xl: 42rem * 1;
+$maxWidth-3xl: 48rem * 1;
+$maxWidth-4xl: 56rem * 1;
+$maxWidth-full: 100% * 1;
+$maxWidth-wrapper: $maxWidth-2xl;
 
 $height-auto: auto;
 
-$spacing-px: "1px";
-$spacing-0: 0;
-$spacing-1: 0.25rem;
-$spacing-2: 0.5rem;
-$spacing-3: 0.75rem;
-$spacing-4: 1rem;
-$spacing-5: 1.25rem;
-$spacing-6: 1.5rem;
-$spacing-8: 2rem;
-$spacing-10: 2.5rem;
-$spacing-12: 3rem;
-$spacing-16: 4rem;
-$spacing-20: 5rem;
-$spacing-24: 6rem;
-$spacing-32: 8rem;
+$spacing-px: 1px * 1;
+$spacing-0: 0 * 1;
+$spacing-1: 0.25rem * 1;
+$spacing-2: 0.5rem * 1;
+$spacing-3: 0.75rem * 1;
+$spacing-4: 1rem * 1;
+$spacing-5: 1.25rem * 1;
+$spacing-6: 1.5rem * 1;
+$spacing-8: 2rem * 1;
+$spacing-10: 2.5rem * 1;
+$spacing-12: 3rem * 1;
+$spacing-16: 4rem * 1;
+$spacing-20: 5rem * 1;
+$spacing-24: 6rem * 1;
+$spacing-32: 8rem * 1;
