--- a/src/styles/utils/variables/sizes/sizes.scss
+++ b/src/styles/utils/variables/sizes/sizes.scss
@@ -27,3 +27,6 @@ $spacing-16: 4rem * 1;
 $spacing-20: 5rem * 1;
 $spacing-24: 6rem * 1;
 $spacing-32: 8rem * 1;
+
+$small: 450px * 1;
+$medium: 900px * 1;
