feat: added prism-themes and change path

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -68,4 +68,11 @@ body {
     color: colors.$font-anchor-dark;
     text-decoration: none;
   }
+
+  code {
+    background-color: #eee;
+    border-radius: 3px;
+    font-family: courier, monospace;
+    padding: 0 3px;
+  }
 }
